[gd_scene load_steps=4 format=3 uid="uid://bxy6q4nuudbeo"]

[ext_resource type="Script" uid="uid://5yb07q2hw4uj" path="res://scripts/game_over_screen.gd" id="1_61w2s"]
[ext_resource type="Shader" uid="uid://e5nwfdykbwsg" path="res://scenes/blur.gdshader" id="2_jw6e5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8yp4"]
shader = ExtResource("2_jw6e5")
shader_parameter/strength = 3.3
shader_parameter/mix_percentage = 0.3

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61w2s")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_r8yp4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -86.5
offset_right = 88.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "High Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Return to Title Screen"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
